--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ a:hover {
 div.title {
   position: absolute;
   top:0;
-  width: 100%; 
+    padding: 30px;
+    box-sizing: border-box;
+  width: 100%;
   text-align:center;
   font-family: 'Lato', sans-serif !important;
   font-style: normal;
