--- a/style.css
+++ b/style.css
@@ -1,52 +1,31 @@
-body{
-  background:#ef6666; margin:0;
-  padding: 0;
-  overflow: hidden;
+body {
+    background: #ef6666;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 canvas {
-  background:#ef6666;
-  position: absolute;
-}
-
-div.metadata {
-  position: absolute;
-  bottom:0;
-  width: 100%;
-
-  font-family: Helvetica, Arial;
-  font-size:11px;
-  font-weight: bold;
-  text-align: center;
-  color: rgba(151,26,22,1);
-}
-div.metadata p {
-  height: 20px;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-  display:inline-block;
-  padding: 0 4px 3px 4px;
-  border-bottom: 2px solid rgba(151,26,22,1);
-  transition: all .2s;
-}
-a:hover {
-  padding: 0 4px 1px 4px;
-  border-bottom: 4px solid rgba(254,121,68,0.4);
+    background: #ef6666;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 div.title {
-  position: absolute;
-  top:0;
-    padding: 30px;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 50px;
     box-sizing: border-box;
-  width: 100%;
-  text-align:center;
-  font-family: 'Lato', sans-serif !important;
-  font-style: normal;
-  font-weight: 100;
-  font-size: 70px;
-  padding-top:40px;
-  color: rgba(254,255,240,1);
+
+    text-align: center;
+    font-family: "Microsoft YaHei UI";
+    font-style: normal;
+    font-weight: 100;
+    font-size: 60px;
+    color: rgba(254, 255, 240, 1);
 }
