--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #ef6666;
+    background: rgba(200, 60, 60, 1);
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -7,19 +7,20 @@ body {
     overflow: hidden;
 }
 
-canvas {
-    background: #ef6666;
-    position: absolute;
-    top: 0;
-    left: 0;
+.page {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
 }
 
-div.title {
-    position: absolute;
+canvas {
+}
+
+.title {
     width: 100%;
-    top: 0;
-    left: 0;
-    padding: 50px;
+    padding: 60px;
     box-sizing: border-box;
 
     text-align: center;
@@ -28,4 +29,24 @@ div.title {
     font-weight: 100;
     font-size: 60px;
     color: rgba(254, 255, 240, 1);
+}
+
+
+canvas {
+    animation: breathe 1s infinite;
+}
+
+@keyframes breathe {
+    0% {
+        transform: scale(1);
+        transform-origin: center center;
+    }
+    50% {
+        transform: scale(1.25);
+        transform-origin: center center;
+    }
+    100% {
+        transform: scale(1);
+        transform-origin: center center;
+    }
 }
